# CppMaestro

./: CMakeLists.txt  README.md
include/CppMaestro/: CppMaestro.hpp  Maestro.hpp
src/: CppMaestro.cpp  Maestro.cpp
test/: CMakeLists.txt  test_cppmaestro.cpp
